--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,6 +1,6 @@
 .content-page{
     --background:#1e1b27!important;
-    height: 100vh;  
+    height: 80vh;  
 }
 
 .dash-grid{
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: space-around; 
     font-family: Calibri;
-    height: 100%;
+    /* height: 100%; */
     padding: 7%;
 }
 
