--- a/src/pages/profile.css
+++ b/src/pages/profile.css
@@ -18,7 +18,7 @@
     text-align:center;
 }
 
-.card-content1 {
+.pro-card {
     --background: #272333 !important;
     width: 90%;
     height: 25vh;
@@ -29,11 +29,11 @@
     justify-content:center;
 }
 
-.dash-btn1{
+.pro-btn1{
     justify-content:center;
 
 }
-.dash-btn{
+.pro-btn{
     --background: #953CCF;
 }
 .avatar-img{
@@ -44,11 +44,7 @@
 .google-email{
     justify-content:center;
 }
-/* .arrow{
-    margin-right:auto;
-    padding: 10px;
-    width: 20px;
-} */
+
 
 .text{
     margin-top: 5px;
